# django-restframework-project-structure

./: .env.example  .flake8  .gitignore  Pipfile  README.md  docker-compose.yml  pyproject.toml
api/v1/: apps.py  urls.py
api/v1/user/: urls.py  views.py
apps/user/: apps.py  models.py
apps/user/migrations/: 0001_initial.py
apps/user/tests/: test_models.py
common/factories/: user.py
config/: urls.py
config/server/django/: Dockerfile
config/settings/: base.py  development.py  production.py  test.py
