[tool.poetry]
name = "django-restframework-project-structure"
version = "0.1.0"
description = "django + drf project structure for personal"
authors = ["sehyeon.jeong <jeongsh4124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"
djangorestframework = "^3.14.0"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
pytest = "^7.4.3"
pytest-django = "^4.7.0"
faker = "^20.0.3"
factory-boy = "^3.3.0"
flake8 = "^6.1.0"
drf-yasg = "^1.21.7"
django-silk = "^5.0.4"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
ignore = ['E231', 'E241']
per-file-ignores = [
    '__init__.py:F401',
]
exclude = [
    'config',
    'migrations',
    '.git',
    '.gitignore',
    '__pycache__',
]
max-line-length = 120
count = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
